--- a/main.html
+++ b/main.html
@@ -14,8 +14,17 @@
 			<div class="ryu-still"></div>
 	  		<div class="ryu-ready"></div>
 	  		<div class="ryu-throwing"></div>
+	  		<div class="ryu-cool"></div>
 		</div>
 		<div class="hadouken"></div>
+		<div class="instructions">
+		<span id="gras">instructions</span>
+		<ol>
+			<li>1_ Press the x button to adopt the cool attitude</li>
+			<li>2_ Move the mouse cursor on Ryu to get him ready</li>
+			<li>3 _Press the mouse key to throw a hadouken</li>
+		</ol>
+		</div>
 	</div>
 	<audio id="hadouken-sound" src="sound/hadouken.mp3" >
 </body>
